[gd_scene load_steps=9 format=2]

[ext_resource path="res://monitoplayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mundo.gd" type="Script" id=3]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game Over - Sound Effect [HD].wav" type="AudioStream" id=5]
[ext_resource path="res://sprites/fondo.jpg" type="Texture" id=6]
[ext_resource path="res://Música De 8 Bits De Fondo Para Tus Vídeos Sin Copyright.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Mundo" type="Node2D"]
script = ExtResource( 3 )
Enemy = ExtResource( 2 )

[node name="fondo" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monitoplayer" parent="." instance=ExtResource( 1 )]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PointTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PosicionInicio" type="Position2D" parent="."]
position = Vector2( 640, 480 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemyPosicion" type="PathFollow2D" parent="Camino"]

[node name="Interfaz" parent="." instance=ExtResource( 4 )]

[node name="gameoversound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="MusicadeFONDO" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="golpe" from="monitoplayer" to="." method="gameover"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="PointTimer" to="." method="_on_PointTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="startgame" from="Interfaz" to="." method="new_game"]
